# spacetime-sym

./: .coveragerc  .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-commercial  LICENSE_OPTION_2  LICENSE_ORIGINAL  README.md  codemeta.json  original_bsym_license  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/api/: physical_quantity.rst  symmetry_operation.rst
docs/source/api/interface/: pymatgen.rst
examples/: bsym_examples.ipynb
spacetime/: __init__.py  colour_operation.py  configuration.py  configuration_space.py  coordinate_config_space.py  linear_algebra.py  permutations.py  physical_quantity.py  physicalquantity.py  point_group.py  polarvector.py  space_group.py  spacetime.py  symmetry.py  symmetry_group.py  symmetry_operation.py
spacetime/interface/: pymatgen.py
tests/integration_tests/: test_interface_pymatgen.py
tests/unit_tests/: test_bsym.py  test_colour_operation.py  test_configuration.py  test_configuration_space.py  test_coordinate_config_space.py  test_interface_pymatgen.py  test_linear_algebra.py  test_permutations.py  test_physical_quantity.py  test_space_group.py  test_spacetime.py  test_symmetry_group.py  test_symmetry_operation.py
tests/unit_tests/spacetime/: test_physical_quantity.py
